--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.1",
+    "react-horizontal-scrolling-menu": "^0.7.8",
     "react-image-gallery": "^1.0.8",
     "react-particles-js": "^3.4.1",
     "react-responsive": "^8.2.0",
