--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "mdbreact": "^5.0.1",
     "node-sass": "^5.0.0",
@@ -17,6 +18,7 @@
     "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.1",
+    "react-horizontal-scrolling-menu": "^0.7.8",
     "react-image-gallery": "^1.0.8",
     "react-particles-js": "^3.4.1",
     "react-responsive": "^8.2.0",
