--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "react-youtube": "^7.13.0",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.12.6",
     "web-vitals": "^1.0.1"
   },
