--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.6.0",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "font-awesome": "^4.7.0",
     "mdbreact": "^5.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -18,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.1",
     "react-image-gallery": "^1.0.8",
+    "react-parallax": "^3.1.2",
     "react-particles-js": "^3.4.1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
