--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^3.1.1",
     "mdbreact": "^5.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -26,12 +27,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-swipeable-views": "^0.13.9",
     "react-youtube": "^7.13.0",
     "sweetalert2": "^10.12.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
