--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^12.6.0",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.0-beta1",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "framer-motion": "^3.1.1",
     "mdbreact": "^5.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-animated-weather": "^4.0.1",
+    "react-big-bang-star-field": "^1.0.10",
     "react-bootstrap": "^1.4.0",
     "react-countup": "^4.3.3",
     "react-coverflow": "^0.2.20",
@@ -27,8 +29,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
+    "react-starfield-animation": "^1.0.1",
     "react-swipeable-views": "^0.13.9",
     "react-youtube": "^7.13.0",
+    "shooting-stars": "0.0.6",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.12.6",
     "web-vitals": "^1.0.1"
   },
