--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-image-gallery": "^1.0.8",
     "react-parallax": "^3.1.2",
     "react-particles-js": "^3.4.1",
+    "react-rellax": "^1.0.3",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
