--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-slick": "^0.27.13",
     "react-spring": "^8.0.27",
     "react-starfield-animation": "^1.0.1",
     "react-swipeable-views": "^0.13.9",
     "react-youtube": "^7.13.0",
     "shooting-stars": "0.0.6",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "sweetalert2": "^10.12.6",
     "web-vitals": "^1.0.1"
