--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
 		"cookie-session": "^1.4.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"google-auth-library": "^6.1.4",
 		"mongoose": "^5.8.4",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
