--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "mdb-ui-kit": "^3.0.0",
     "mdbreact": "^5.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-countup": "^4.3.3",
     "react-coverflow": "^0.2.20",
-    "mdb-ui-kit": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.1",
-    "react-google-login": "^5.2.1",
+    "react-google-login": "^5.2.2",
     "react-image-gallery": "^1.0.8",
     "react-particles-js": "^3.4.1",
     "react-responsive": "^8.2.0",
@@ -35,6 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
