--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,14 @@
     "react-google-login": "^5.2.2",
     "react-image-gallery": "^1.0.8",
     "react-particles-js": "^3.4.1",
+    "react-redux": "^7.2.2",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "react-youtube": "^7.13.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.12.6",
     "web-vitals": "^1.0.1"
   },
