--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-spring": "^8.0.27",
     "react-starfield-animation": "^1.0.1",
     "react-swipeable-views": "^0.13.9",
+    "react-tooltip": "^4.2.11",
     "react-youtube": "^7.13.0",
     "shooting-stars": "0.0.6",
     "slick-carousel": "^1.8.1",
