--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "react-youtube": "^7.13.0",
     "sweetalert2": "^10.12.6",
     "web-vitals": "^1.0.1"
