--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:8080/",
   "browserslist": {
     "production": [
       ">0.2%",
