--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "mdbreact": "^5.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.4.0",
     "react-countup": "^4.3.3",
     "react-coverflow": "^0.2.20",
@@ -33,6 +34,7 @@
     "react-scroll": "^1.8.1",
     "react-spring": "^8.0.27",
     "react-tooltip": "^4.2.11",
+    "react-transition-group": "^4.4.1",
     "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
